[package]
name = "psf"
version = "0.2.0"
authors = ["Piotr Zaczkowski <pzaczkowski@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Allow to read psf fonts, including (optionally) zipped ones"
documentation = "https://docs.rs/psf/"
repository = "https://github.com/zaczkows/psf"
readme = "README.md"
keywords = [ "psf", "console", "font" ]

[features]
# "unzip" is enabled by default
default = [ "unzip" ]
# optional features
unzip = [ "flate2" ]

[dependencies]

[dependencies.flate2]
version = "1.0"
optional = true
